tests/ui/eii/static/mismatch_safety.stderr
error: safety does not match with the definition of`#[hello]`
  --> $DIR/mismatch_safety.rs:10:1
   |
LL | #[hello]
   | ^^^^^^^^

error: aborting due to 1 previous error

